--- a/index.html
+++ b/index.html
@@ -10,42 +10,42 @@
 
     <body style="background-color: black; color: white;">
 
-        <header>
+        <header style="position: fixed; width: 100%; display: flex; top: 5px; padding-left: 1rem">
 
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
+            <nav style="font-size: 1.5rem; word-spacing: 2rem;">
+                <a href="index.html" style="text-decoration: none; color: white;">Home</a>
+                <a href="projects.html" style="text-decoration: none; color: white;">Projects</a>
             </nav>
 
         </header>
 
 
-        <section>
+        <section style="display: flex; justify-content: space-between; align-items: center; padding-top: 5rem;">
 
-            <div>
-               
+            <div style="position: relative; padding-left: 9%;">
+                <img style="width: 36vmax; border-radius: 50%;" src="img/avatar2.jpg" alt="">
             </div>
 
-            <div>
-                <h1>Hi, It's Dias</h1>
-                <h3>I'm an Artist</h3>
-                <p>I'm a Performance Artist. I'm hired for people to fullfill their fantasies. Their <br> Deep Dark Fantasies</p>
+            <div style="width: 40%; padding-right: 9%;">
+                <h1 style="font-size:3rem;">Hi, It's <span style="color: Plum;">Dias</span> </h1>
+                <h3 style="font-size:2rem;">I'm an <span style="color: Plum;">Artist</span></h3>
+                <p style="color: white; opacity: 0.8; font-size: 1.5rem;">I'm a Performance Artist. I'm hired for people to fullfill their fantasies. Their <br> Deep Dark Fantasies</p>
             </div>
 
         </section>
 
 
-        <footer>
-            
-            <div>
+        <footer style="position: fixed; opacity: 0.8; bottom: 0; display: flex; justify-content: space-between; width:100%;">
+
+            <div style="padding-left: 1rem;">
                 <h5>You can find me there: <br>
-                    <a href="https://t.me/Onanore" target="_blank">telegram</a>
-                    <a href="https://github.com/Onanore" target="_blank">github</a>
+                    <a href="https://t.me/Onanore" target="_blank"><img src="img/icons8-telegram-logo-50.png" alt="" style="width: 25px;"></a>
+                    <a href="https://github.com/Onanore" target="_blank"><img src="img/icons8-github-50.png" alt="" style="width: 25px;"></a>
                 </h5>
             </div>
 
-            <div>
-                <h5>mail: <a href="mailto:shokanovd@inbox.ru" target="_blank">shokanovd@inbox.ru</a></h5>
+            <div style="padding-right: 2rem;">
+                <h5>mail: <a href="mailto:shokanovd@inbox.ru" target="_blank" style="text-decoration: none; color: plum;">shokanovd@inbox.ru</a></h5>
             </div>
 
         </footer>
