--- a/projects.html
+++ b/projects.html
@@ -10,36 +10,40 @@
 
     <body style="background-color: black; color: white;">
 
-        <header>
+        <header style="position: fixed; width: 100%; display: flex; top: 5px; padding-left: 1rem;">
 
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
+            <nav style="font-size: 1.5rem; word-spacing: 2rem;">
+                <a href="index.html" style="text-decoration: none; color: white;">Home</a>
+                <a href="projects.html" style="text-decoration: none; color: white;">Projects</a>
             </nav>
 
         </header>
         
 
-        <section>
+        <section style="display: flex; justify-content: space-between; align-items: center; padding-top: 5rem;">
 
             <div>
-                <h1>WHEN I DO SOMETHING. I WILL ADD IT THERE</h1>
+                <h2 style="opacity: 0.8; font-size: 10rem;">WHEN I DO SOMETHING. I WILL ADD IT THERE</h2>
+            </div>
+
+            <div>
+                <img src="img/nothingToSeeHere.png" alt="" style="width: 30rem;">
             </div>
 
         </section>
 
 
-        <footer>
+        <footer style="position: fixed; opacity: 0.8; bottom: 0; display: flex; justify-content: space-between; width:100%;">
             
-            <div>
+            <div style="padding-left: 1rem;">
                 <h5>You can find me there: <br>
-                    <a href="https://t.me/Onanore" target="_blank">telegram</a>
-                    <a href="https://github.com/Onanore" target="_blank">github</a>
+                    <a href="https://t.me/Onanore" target="_blank"><img src="img/icons8-telegram-logo-50.png" alt="" style="width: 25px;"></a>
+                    <a href="https://github.com/Onanore" target="_blank"><img src="img/icons8-github-50.png" alt="" style="width: 25px;"></a>
                 </h5>
             </div>
 
-            <div>
-                <h5>mail: <a href="mailto:shokanovd@inbox.ru" target="_blank">shokanovd@inbox.ru</a></h5>
+            <div style="padding-right: 2rem;">
+                <h5>mail: <a href="mailto:shokanovd@inbox.ru" target="_blank" style="text-decoration: none; color: plum;">shokanovd@inbox.ru</a></h5>
             </div>
 
         </footer>
