--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         </header>
         
 
-        <section style="display: flex; justify-content: space-between; align-items: center; padding-top: 5rem;">
+        <section style="display: flex; justify-content: space-between; align-items: center; padding-top: 5rem; margin-left: 10px;">
 
             <div>
                 <h2 style="opacity: 0.8; font-size: 10rem;">WHEN I DO SOMETHING. I WILL ADD IT THERE</h2>
@@ -31,21 +31,5 @@
             </div>
 
         </section>
-
-
-        <footer style="position: fixed; opacity: 0.8; bottom: 0; display: flex; justify-content: space-between; width:100%;">
-            
-            <div style="padding-left: 1rem;">
-                <h5>You can find me there: <br>
-                    <a href="https://t.me/Onanore" target="_blank"><img src="img/icons8-telegram-logo-50.png" alt="" style="width: 25px;"></a>
-                    <a href="https://github.com/Onanore" target="_blank"><img src="img/icons8-github-50.png" alt="" style="width: 25px;"></a>
-                </h5>
-            </div>
-
-            <div style="padding-right: 2rem;">
-                <h5>mail: <a href="mailto:shokanovd@inbox.ru" target="_blank" style="text-decoration: none; color: plum;">shokanovd@inbox.ru</a></h5>
-            </div>
-
-        </footer>
     </body>
 </html>
